<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_2"
    android:background="@android:color/darker_gray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/text_pos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTeam"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textPos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ptl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textW"
        app:layout_constraintStart_toStartOf="@+id/guidelineTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textD"
        app:layout_constraintStart_toEndOf="@id/textPld"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textL"
        app:layout_constraintStart_toEndOf="@id/textW"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textGD"
        app:layout_constraintStart_toEndOf="@id/textD"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textPts"
        app:layout_constraintStart_toEndOf="@id/textL"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textGD"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
